--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,7 +1,7 @@
 <h1>Search customer</h1>
 <form action="/search" method="GET">
-  <p>First name:  <input type="text" name="fname"></input></p>
-  <p>Last name:   <input type="text" name="lname"></input></p>
+  <p>First name:  <input type="text" name="fn"></input></p>
+  <p>Last name:   <input type="text" name="ln"></input></p>
   <p>ZIP:         <input type="text" name="zip"></input></p>
   <p>Account:     <input type="text" name="acct"></input></p>
   <p>MSISDN:      <input type="text" name="msisdn"></input></p>
@@ -9,9 +9,19 @@
 </form>
 <h2>Customers</h2>
 <ul>
-      <% @customers.each do || %>
-        <li><a href="/post/<%= post.id %>"><%= post.title %></a></li>
-      <% end %>
+  <% @customers.each do |c| %>
+    <li>
+    <h3>ID: <%= c.id %></h3>
+    <ul>
+      <li>MSISDN: <%= c.msisdn %></li>
+      <li>Account: <%= c.acct %></li>
+      <li>First name: <%= c.fn %></li>
+      <li>Last name: <%= c.ln %></li>
+      <li>ZIP: <%= c.zip %></li>
+    </ul>
+    <br />
+    </li>
+  <% end %>
   <br />
 </ul>
 
